# simple-layout

./: Cargo.toml  README.md  release.sh
.github/: dependabot.yml
.github/workflows/: rust.yml
examples/: playground.rs  two_text.rs
src/: align.rs  border.rs  draw.rs  expand.rs  layoutable.rs  lib.rs  linear.rs  padding.rs  placement.rs  scale.rs
