[package]
name = "simple-layout"
version = "0.0.3-SNAPSHOT"
edition = "2021"
license = "MIT"
description = "Simple layout library for embedded-graphics"
repository = "https://github.com/koa/simple-layout"
categories = ["gui", "graphics"]
keywords = ["layout", "linear-layout"]

[dependencies]
embedded-graphics = "0.8"
log = { version = "0.4.20", optional = true }
env_logger = { version = "0.10.1", optional = true }
embedded-graphics-simulator = { version = "0.6.0", optional = true }

[dev-dependencies]
chrono = "0.4.37"

[features]
simulate-example = ["embedded-graphics-simulator", "log"]
